# pydantify_common

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
src/pydantify_common/: __init__.py  helper.py  model.py
tests/: test_examples.py  test_model_dump_xml.py
tests/examples/multimodel/: expected.xml
tests/examples/with_augment/: expected.json  expected.xml  expected_ns.xml  model.py
tests/examples/with_import_uses/: expected.xml  expected_ns.xml  model.py
