[project]
name = "pydantify-common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ubaumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
