[project]
name = "pydantify-common"
version = "0.1.0"
description = "Pydantify common classes and functions"
readme = "README.md"
authors = [
    { name = "ubaumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.2",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.12",
]
